<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dnb.whackamole.MenuActivity" >

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="5dp"
        android:text="@string/button_play" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playButton"
        android:layout_alignRight="@+id/playButton"
        android:layout_below="@+id/playButton"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/button_settings" />

    <Button
        android:id="@+id/ranksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playButton"
        android:layout_alignRight="@+id/playButton"
        android:layout_below="@+id/settingsButton"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/button_ranks" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/playButton"
        android:layout_alignRight="@+id/playButton"
        android:layout_below="@+id/ranksButton"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:text="@string/button_help" />

    <Button
        android:id="@+id/facebookLinkButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/helpButton"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/helpButton"
        android:text="@string/button_link" />

</RelativeLayout>